using System;

namespace TodoApi.Models.Staff
{
    public class OperationalWindow
    {
        public TimeSpan StartTime { get; set; }
        public TimeSpan EndTime { get; set; }
    }
}
